package edu.nju.jap.config;

import edu.nju.jap.mapper.SysUserMapper;
import edu.nju.jap.model.entity.User;
import edu.nju.jap.service.support.JwtService;
import jakarta.servlet.http.HttpServletRequest;
import jakarta.servlet.http.HttpServletResponse;
import org.springframework.http.HttpStatus;
import org.springframework.stereotype.Component;
import org.springframework.web.server.ResponseStatusException;
import org.springframework.web.servlet.HandlerInterceptor;

@Component
public class SimpleAuthInterceptor implements HandlerInterceptor {
    private final JwtService jwtService;
    private final SysUserMapper sysUserMapper;

    public SimpleAuthInterceptor(JwtService jwtService, SysUserMapper sysUserMapper) {
        this.jwtService = jwtService;
        this.sysUserMapper = sysUserMapper;
    }

    @Override
    public boolean preHandle(HttpServletRequest request, HttpServletResponse response, Object handler) {
        if ("OPTIONS".equalsIgnoreCase(request.getMethod())) {
            return true;
        }
        String authHeader = request.getHeader("Authorization");
        if (authHeader == null) {
            String tokenParam = request.getParameter("token");
            if (tokenParam != null && !tokenParam.isEmpty()) {
                authHeader = "Bearer " + tokenParam;
            }
        }
        User user = jwtService.resolveUser(authHeader);
        if (user == null) {
            throw new ResponseStatusException(HttpStatus.UNAUTHORIZED, "未登录或令牌无效/已过期");
        }
        if (sysUserMapper.selectById(user.id) == null) {
            throw new ResponseStatusException(HttpStatus.UNAUTHORIZED, "该账号已被注销");
        }
        request.setAttribute("currentUser", user);
        return true;
    }
}
